<resources>
    <string name="app_name">Twrp Builder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="upload_backup">Upload Backup</string>
    <string name="backup_recovery">Backup Recovery</string>
    <string name="download_recovery">Download Recovery</string>
    <string name="build_description_text"> Twrp build Status :- \n\n Pending. \n \n What now ? \n \n Check this app next day if you "don't see download button then contact me via email or post comment on xda .</string>
    <string name="backup_recovery_help_text">Backup Recovery :- \nThis option backups your recovery, mounts and fingerprint of device. You will not see this option once you have clicked (delete TwrpBuilder/ folder to restore button).</string>
    <string name="upload_backup_help_text">\n\n Upload Backup :- \nThis option allows you to upload recovery Backup made from app (you "can't" upload if you have done one time).</string>
    <string name="download_recovery_help_text">\n\n Download Recovery :- \nThis option allows to download recovery if "it's" ready on server (This button is hidden and shown when all processes is done).</string>
    <string name="request_approved">\n Recovery is ready ! \n Test recovery and send me email it works or not. </string>
    <string name="contribution_counter_info">Made %d contributions</string>
    <string name="connecting_to_github">Connecting to Github…</string>
    <string name="loading">Loading…</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="no_network_available">No network available</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="refresh">Refresh</string>
    <string name="device_not_supported">Your device is not supported</string>
    <string name="choose_app_to_open">Open with?</string>
    <string name="install">Install</string>
    <string name="download">Download</string>
    <string name="app_updates">App Updates</string>
    <string name="recovery_mount_point">"Recovery mount point "</string>
    <string name="twrp_downloaded">"File downloaded at \n/sdcard/TwrpBuilder/Twrp.img . "</string>
    <string name="download_complete">Download complete</string>
    <string name="failed_to_download">"Failed To Download . "</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded (</string>
    <string name="uploading">Uploading</string>
    <string name="uploaded">Uploaded (</string>
    <string name="failed_to_upload">"Failed to upload data . "</string>
    <string name="upload_finished">Upload complete</string>
    <string name="Uploading_please_wait">"Uploading Please Wait... "</string>
    <string name="warning_about_recovery_backup">If it takes more then 1 min to backup then send me recovery.img from email</string>
    <string name="made_recovery_backup">"Made Recovery Backup. "</string>
    <string name="no_network">No Network</string>
    <string name="not_rooted">Not Rooted</string>
    <string name="my_email">androidlover5842@gmail.com</string>
    <string name="banner_ad_unit_id">ca-app-pub-5248092130870106/2628182875</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="teamwin_login_screen_splash">TeamWin Login Screen Splash</string>
    <string name="teamwin_login_screen_splash_text">TeamWin Login Screen Splash Text</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Create account</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="login_image">Login Image</string>
    <string name="backup">Backup</string>
    <string name="tools">Tools</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="credits">Credits</string>
    <string name="settings">Settings</string>
    <string name="show_ads">Show Ads</string>
    <string name="banner_ad_unit_id_1">ca-app-pub-5248092130870106/7763059672</string>
    <string name="banner_ad_unit_id_2">ca-app-pub-5248092130870106/9239792873</string>
    <string name="banner_ad_unit_id_3">ca-app-pub-5248092130870106/1716526074</string>
    <string name="banner_ad_unit_id_4">ca-app-pub-5248092130870106/3193259278</string>
    <string name="upload_cancelled">Upload Cancelled.</string>
    <string name="upload_resumed">Upload Resumed.</string>
    <string name="upload_paused">Upload Paused.</string>
    <string name="twrp_builder_login_screen">Twrp Builder login Screen</string>
    <string name="twrp_builder_reset_password">Twrp Builder Reset Password</string>
    <string name="beta">[BETA]</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="failed_to_delete_data">Failed To  Delete Data.</string>
    <string name="successfully_delete_data">Successfully  Deleted Data.</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="interstitial_full_screen">ca-app-pub-5248092130870106/9066179272</string>
    <string name="watch">Watch</string>
    <string name="watch_ads_to_say_thanks">Watch ads to say thanks</string>
    <string name="say_thanks">Say Thanks</string>
    <string name="video_ads">ca-app-pub-5248092130870106/7676844478</string>
    <string name="failed_to_load_ads">Failed To Load Ads</string>
    <string name="for_developers">For Developers</string>
    <string name="check_twrp">Check Twrp</string>
    <string name="logout">Logout</string>
</resources>
