<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/backup_recovery_help_text"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/backup_recovery"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/upload_backup_help_text"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/upload_backup"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/download_recovery_help_text"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/download_recovery"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />


</LinearLayout>
    </ScrollView>